--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				</a>
 				<p>For the TypeScript API documentation, please see the following link:</p>
 				<ul>
-					<li><a href="https://docs.valist.io/lib/classes/_index_.valist.html">TypeScript API Docs</a></li>
+					<li><a href="https://pawanpaudel93.github.io/valist-software-license/">TypeScript API Docs</a></li>
 				</ul>
 				<a href="#install" id="install" style="color: inherit; text-decoration: none;">
 					<h2>Install</h2>
